--- a/PetMate/src/components/Navbar.css
+++ b/PetMate/src/components/Navbar.css
@@ -198,21 +198,50 @@ a {
 .menu-hamburguer-icon {
     font-size: 32px;
 }
+
+
+.user-icon-container-nav {
+    position: relative;
+    display: inline-block;
+}
+
+.texto-perfil {
+    visibility: hidden;
+    width: max-content;
+    background-color: #f5f5f5;
+    color: #6c757d;
+    text-align: center;
+    font-size: 12px;
+    font-family: 'nunito', sans-serif;
+    padding: 5px;
+    border-radius: 4px;
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.user-icon-container-nav:hover .texto-perfil {
+    visibility: visible;
+    opacity: 1;
+}
+
+
+
 @media (max-width: 768px) {
     .navbar-container {
         width: 80px;
         padding: 0;
     }
 
-
-
-
     .nav-img {
         width: 90px;
     }
-
-
-
 
     .botoes-nav {
       display: none;
