--- a/PetMate/src/pages/Perfil.css
+++ b/PetMate/src/pages/Perfil.css
@@ -12,7 +12,8 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    padding-top: 6rem;
+    /* justify-content: center; */
 }
 .container-pets {
     width: 42vw;
@@ -25,6 +26,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-bottom: 3rem;
     /* margin-top: -50px; */
 }
 
