--- a/PetMate/src/components/CardDenuncia.css
+++ b/PetMate/src/components/CardDenuncia.css
@@ -114,6 +114,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-transform: capitalize;
 }
 
 .status-pendente {
