--- a/PetMate/src/components/CardPetPerfil.css
+++ b/PetMate/src/components/CardPetPerfil.css
@@ -183,6 +183,9 @@ margin-right: auto;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: background-color 0.3s;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 /* .paginacao-pets-perfil button:hover:not(:disabled) {
