--- a/PetMate/src/components/ModalMinhasDenuncias.css
+++ b/PetMate/src/components/ModalMinhasDenuncias.css
@@ -2,14 +2,17 @@
   display: flex;
   flex-direction: row;
   position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background: rgba(0, 0, 0, 0.03);
   z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: fadeIn 0.3s ease-in-out;
 }
+
 .conteiner-modal-minhas-denuncias {
   display: flex;
   flex-direction: row;
@@ -23,7 +26,67 @@
   min-width: 150vh;
   overflow-y: auto;
   position: relative;
+  animation: fadeIn 0.3s ease-in-out;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
 }
+
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+      transform: scale(0.8);
+  }
+
+  10% {
+      opacity: 0.1;
+      transform: scale(0.82);
+  }
+
+  20% {
+      opacity: 0.2;
+      transform: scale(0.84);
+  }
+
+  30% {
+      opacity: 0.3;
+      transform: scale(0.86);
+  }
+
+  40% {
+      opacity: 0.4;
+      transform: scale(0.88);
+  }
+
+  50% {
+      opacity: 0.5;
+      transform: scale(0.9);
+  }
+
+  60% {
+      opacity: 0.6;
+      transform: scale(0.92);
+  }
+
+  70% {
+      opacity: 0.7;
+      transform: scale(0.94);
+  }
+
+  80% {
+      opacity: 0.8;
+      transform: scale(0.96);
+  }
+
+  90% {
+      opacity: 0.9;
+      transform: scale(0.98);
+  }
+
+  100% {
+      opacity: 1;
+      transform: scale(1);
+  }
+}
+
 .close-modal-btn {
   width: 10%;
   height: 5%;
