--- a/PetMate/src/components/ModalDenuncia.css
+++ b/PetMate/src/components/ModalDenuncia.css
@@ -1,12 +1,11 @@
 .modal-denuncia-fundo {
     position: fixed;
     inset: 0;
-    backdrop-filter: blur(1px);
-    /* background-color: rgba(0, 0, 0, 0.2); */
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 1100;
+    backdrop-filter: none;
 }
 
 .container-modal-denuncia {
@@ -14,11 +13,58 @@
     width: 50vw;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow-y: auto;
     border-left: #654833 25px solid;
     align-items: center;
     padding: 30px;
+    animation: fadeIn 0.15s ease-out;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    10% {
+        opacity: 0.1;
+        transform: scale(0.82);
+    }
+    20% {
+        opacity: 0.2;
+        transform: scale(0.84);
+    }
+    30% {
+        opacity: 0.3;
+        transform: scale(0.86);
+    }
+    40% {
+        opacity: 0.4;
+        transform: scale(0.88);
+    }
+    50% {
+        opacity: 0.5;
+        transform: scale(0.9);
+    }
+    60% {
+        opacity: 0.6;
+        transform: scale(0.92);
+    }
+    70% {
+        opacity: 0.7;
+        transform: scale(0.94);
+    }
+    80% {
+        opacity: 0.8;
+        transform: scale(0.96);
+    }
+    90% {
+        opacity: 0.9;
+        transform: scale(0.98);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .container-modal-denuncia h2, .container-modal-denuncia h4 {
