--- a/PetMate/src/components/ModalEditarUser.css
+++ b/PetMate/src/components/ModalEditarUser.css
@@ -21,8 +21,55 @@
     width: 40vw;
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    animation: fadeIn 0.15s;
   }
   
+  @keyframes fadeIn {
+      0% {
+          opacity: 0;
+          transform: scale(0.8);
+      }
+      10% {
+          opacity: 0.1;
+          transform: scale(0.82);
+      }
+      20% {
+          opacity: 0.2;
+          transform: scale(0.84);
+      }
+      30% {
+          opacity: 0.3;
+          transform: scale(0.86);
+      }
+      40% {
+          opacity: 0.4;
+          transform: scale(0.88);
+      }
+      50% {
+          opacity: 0.5;
+          transform: scale(0.9);
+      }
+      60% {
+          opacity: 0.6;
+          transform: scale(0.92);
+      }
+      70% {
+          opacity: 0.7;
+          transform: scale(0.94);
+      }
+      80% {
+          opacity: 0.8;
+          transform: scale(0.96);
+      }
+      90% {
+          opacity: 0.9;
+          transform: scale(0.98);
+      }
+      100% {
+          opacity: 1;
+          transform: scale(1);
+      }
+  }
   .editar-user-container h2 {
     font-size: 24px;
     margin-bottom: 20px;
