--- a/PetMate/src/components/ModalLogout.css
+++ b/PetMate/src/components/ModalLogout.css
@@ -4,7 +4,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(2px);
     display: flex;
     justify-content: center;
@@ -23,8 +23,54 @@
     border-radius: 10px;
     width: 30vw;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    animation: fadeIn 0.15s;
 }
-
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    10% {
+        opacity: 0.1;
+        transform: scale(0.82);
+    }
+    20% {
+        opacity: 0.2;
+        transform: scale(0.84);
+    }
+    30% {
+        opacity: 0.3;
+        transform: scale(0.86);
+    }
+    40% {
+        opacity: 0.4;
+        transform: scale(0.88);
+    }
+    50% {
+        opacity: 0.5;
+        transform: scale(0.9);
+    }
+    60% {
+        opacity: 0.6;
+        transform: scale(0.92);
+    }
+    70% {
+        opacity: 0.7;
+        transform: scale(0.94);
+    }
+    80% {
+        opacity: 0.8;
+        transform: scale(0.96);
+    }
+    90% {
+        opacity: 0.9;
+        transform: scale(0.98);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
 
 .meio-modal {
     display: flex;
