--- a/PetMate/src/components/ModalPetAdotado.css
+++ b/PetMate/src/components/ModalPetAdotado.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(2px);
     display: flex;
     justify-content: center;
@@ -24,6 +24,53 @@
     max-width: 90%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
+    animation: fadeIn 0.15s;
+}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    10% {
+        opacity: 0.1;
+        transform: scale(0.82);
+    }
+    20% {
+        opacity: 0.2;
+        transform: scale(0.84);
+    }
+    30% {
+        opacity: 0.3;
+        transform: scale(0.86);
+    }
+    40% {
+        opacity: 0.4;
+        transform: scale(0.88);
+    }
+    50% {
+        opacity: 0.5;
+        transform: scale(0.9);
+    }
+    60% {
+        opacity: 0.6;
+        transform: scale(0.92);
+    }
+    70% {
+        opacity: 0.7;
+        transform: scale(0.94);
+    }
+    80% {
+        opacity: 0.8;
+        transform: scale(0.96);
+    }
+    90% {
+        opacity: 0.9;
+        transform: scale(0.98);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .texto-adotar-pet h1 {
