fix img ongs + pets

--- a/PetMate/src/components/JanelaOng.css
+++ b/PetMate/src/components/JanelaOng.css
@@ -119,8 +119,8 @@
 }
 
 .logo-ong {
-    width: 12em;
-    height: 12em;
+    width: 20em;
+    min-height: auto;
     object-fit: cover;
     border-radius: 8px;
 }
