--- a/PetMate/src/pages/Perfil.css
+++ b/PetMate/src/pages/Perfil.css
@@ -315,7 +315,7 @@
     font-family: 'Nunito';
     font-weight: 700;
     letter-spacing: 0.03em;
-    padding: 0px 25px 0px 25px
+    padding: 0px 25px 0px 25px;
 }
 
 
