--- a/PetMate/src/components/CardDenuncia.css
+++ b/PetMate/src/components/CardDenuncia.css
@@ -178,3 +178,20 @@
 .icon-seta-pag {
     font-size: 20px;
 }
+
+.sem-denuncias {
+    display: flex;
+    font-size: 24px;
+    font-weight: bold;
+    color: #84644D;
+    text-align: center;
+    padding: 10px 20px;
+    background-color: #F6F4F1;
+    border: 2px solid #AD947E;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    margin-top: 5rem;
+    margin-left: auto;
+    margin-right: auto;
+}
