--- a/PetMate/src/pages/Login.css
+++ b/PetMate/src/pages/Login.css
@@ -128,8 +128,6 @@
 .inpts-login{
     display: flex;
     flex-direction: column;
-    
-
 }
 
 .inpts-login input{
@@ -216,7 +214,7 @@
     flex-direction: column;
     height: auto;
     width: 90%;
-    margin-bottom: 0;
+    /* margin-bottom: 2; */
     align-items: center;
 }
 
@@ -296,13 +294,24 @@
     height: 26px;
 
 }
-  .mydict div {
+  .mydict{
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     justify-content: center;
+    align-items: center;
+    gap: 1rem;
     /* border: solid; */
     
+  }
+
+  .p-texto-login-desejado{
+    font-size: 18px;
+    font-family: inter;
+    font-weight: 700;
+    color: #6b4f3a;
+    margin-top: 0.9rem;
   }
   
   .mydict input[type="radio"] {
